--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "postinstall": "install-app-deps"
   },
   "dependencies": {
+    "bozon": "^0.5.5",
     "electron-builder": "5.34.1",
     "electron-packager-tf": "7.5.3",
     "electron-prebuilt": "1.3.6",
     "gulp": "^3.9.1",
+    "jquery": "^3.1.1",
     "mocha": "^2.5.3",
     "spectron": "^3.2.6",
     "webpack-stream": "^3.2.0"
